--- a/Level-1-task-2/index.html
+++ b/Level-1-task-2/index.html
@@ -57,7 +57,7 @@
         <div class="about-circle"></div>
 
         <div class="about-img">
-            <img src="/images/about-img.jpg" alt="">
+            <img src="/Level-1-task-2/images/about-img.jpg" alt="">
         </div>
 
         <div class="about-content">
